implementacion de private route

--- a/.env.template
+++ b/.env.template
@@ -8,4 +8,4 @@ DB_USERNAME=postgres
 
 PORT=3000
 HOST_API=http://localhost:3000/api
-JWT_SECRET = eSTe3SmiSe3dSECRET321
+JWT_SECRET = eSTe3SmiSe3dSECRET321 #en caso de que se filtre el token secreto se puede cambiar y manda error de unauthorized
