--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.12",
     "@types/passport-jwt": "^4.0.1",
